--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,8 +1,14 @@
+.div{
+  margin: 0;
+  width: 100%;
+  
+}
 
 .navbar {
     display: flex;
+    width: 1200px;
     justify-content: space-between;
-    align-items: center;
+    align-items: left;
     background-color: #007bff;
     padding: 10px;
     color: white;
@@ -20,6 +26,7 @@
   
   .navbar-menu {
     display: flex;
+    align-items: left;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -82,18 +89,20 @@
   }
   
   .container {
-    max-width: 600px;
-    margin: 0 auto;
+    width: 1200px;
+    margin: 0;
     padding: 20px;
     background-color: #f8f9fa;
     border: 1px solid #dee2e6;
     border-radius: 5px;
+    align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
   footer {
     text-align: center;
     margin-top: 20px;
+    width: 1200px;
     padding: 10px;
     background-color: #f8f9fa;
     border: 1px solid #dee2e6;
